Revert to html supplementary

--- a/model_structures_checks_diagnostics.html
+++ b/model_structures_checks_diagnostics.html
@@ -148,6 +148,7 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="structure-1">Structure</h2>
 <p>The model for lactate outcomes used the log transformed lactate as the dependent variable (initial modelling using the raw values produced very poor posterior predictive checks) included fixed effects for condition (“Control”, “Low BFR”, “High BFR”), timepoint (“Pre”, “Post”), and their interaction, as well random intercepts for participants. The model structure was therefore as follows:</p>
 <p><span class="math display">\[
+\small
 \begin{aligned}
   \operatorname{value}_{i}  &amp;\sim N \left(\mu, \sigma^2 \right) \\
     \mu &amp;=\alpha_{j[i]} + \beta_{1}(\operatorname{Condition}_{\operatorname{Low BFR}}) + \beta_{2}(\operatorname{Condition}_{\operatorname{High BFR}}) + \beta_{3}(\operatorname{Timepoint}) + \beta_{4}(\operatorname{Condition}_{\operatorname{Low BFR}} \times \operatorname{Timepoint}) + \beta_{5}(\operatorname{Condition}_{\operatorname{High BFR}} \times \operatorname{Timepoint}) \\
@@ -326,6 +327,7 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="structure-5">Structure</h2>
 <p>The model for sprint outcomes included the fixed effect for condition (“Control”, “Low BFR”, “High BFR”), distance covered in meters, and their interaction. Random intercepts for participants and random slopes for condition and distance were included (though their interaction was not due to it introducing singularity). The model structure was therefore as follows. The model structure was therefore as follows:</p>
 <p><span class="math display">\[
+\tiny
 \begin{aligned}
   \operatorname{value}_{i}  &amp;\sim N \left(\mu, \sigma^2 \right) \\
     \mu &amp;=\alpha_{j[i]} + \beta_{1j[i]}(\operatorname{Condition}_{\operatorname{Low BFR}}) + \beta_{2j[i]}(\operatorname{Condition}_{\operatorname{High BFR}}) + \beta_{3j[i]}(\operatorname{Distance}) + \beta_{4}(\operatorname{Condition}_{\operatorname{Low BFR}} \times \operatorname{Distance}) + \beta_{5}(\operatorname{Condition}_{\operatorname{High BFR}} \times \operatorname{Distance}) \\    
